Correcao lista campeoes

--- a/src/app/components/final-result/final-result.component.html
+++ b/src/app/components/final-result/final-result.component.html
@@ -5,7 +5,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">1º</span>
                 </div>
-                <div class="form-control" *ngIf="champions.length > 0">{{ champions.first.titulo }}</div>
+                <div class="form-control">{{ champions.first.titulo }}</div>
             </div>
         </div>
     </div>
@@ -16,7 +16,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">2º</span>
                 </div>
-                <div class="form-control" *ngIf="champions.length > 0">{{ champions.second.titulo }}</div>
+                <div class="form-control">{{ champions.second.titulo }}</div>
             </div>
         </div>
     </div>
